--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ chrono = "0.4"
 clap = { version = "4.3", features = ["derive", "env"] }
 env_logger = "0.10"
 ethers-core = { version = "2.0", features = ["eip712"] }
+ethers-signers = "2.0.14"
 ethsign = "0.9.0"
 jsonwebtoken = "8.3"
 log = "0.4"
